@@ -77,6 +77,9 @@ export(
     gamLine,
     loessLine,
     quantregLine,
+    marginalPlot,
+    mcPlot,
+    mcPlots,
     
     # method explicitly exported for import in other packages
     linearHypothesis.default,
@@ -213,6 +216,7 @@ S3method(matchCoefs, lme)
 S3method(matchCoefs, mer)
 S3method(matchCoefs, merMod)
 S3method(matchCoefs, mlm)
+S3method(marginalPlot, lm)
 S3method(mmp, default)
 S3method(mmp, lm)
 S3method(mmp, glm)
