@@ -1,5 +1,9 @@
 Changes to Version 2.0-22
 
+    o two new functions marginalPlot to display a marginal plot of an lm response versus a regressor and mcPlot to draw a pair of plots given by a marginal plot and the corresponding added-variable plot.  Primarily pedigogical to illustrate that marginal plot display more variation than do conditional onees.
+
+    o added argument marginal.scale to avPlots to scale the added-variable plot for Y on X|Z using the scale from the marginal plot of Y vs X ignoring X.  The default is FALSE, corresponding to using scaling to maximize resolution or use xlim and ylim to set user scaling.
+
     o Fixed bugs in Anova.survreg() that could affect types II, II tests, both Wald and LR, and one similar bug in linearHypothesis.survreg().
 
     o Replaced calls to require() with requireNamespace() where possible (suggestion of Brian Ripley).
